# ownage_bot

./: CMakeLists.txt  README.md  package.xml  setup.py
launch/: area_params.launch  aruco_marker_publisher.launch  ownage_bot.launch  rule_instructor.launch  speech_processor.launch
msg/: AgentMsg.msg  Command.msg  FactMsg.msg  FeedbackMsg.msg  ObjectMsg.msg  PredicateMsg.msg  RichFeedback.msg  RichObject.msg  RichObjectArray.msg  RuleMsg.msg  TaskMsg.msg
nodes/: agent_tracker.py  aruco_tracker.py  baxter_tracker.py  command_prompt.py  dialog_manager.py  dummy_action_provider.py  endpoint_tracker.py  object_classifier.py  object_collector.py  object_tester.py  object_tracker.py  owner_predictor.py  ownership_tracker.py  rule_instructor.py  rule_manager.py  screen_manager.py  simulated_tracker.py  speech_processor.py  task_manager.py  text_control.py  world_display.py  world_simulator.py
ownage_bot/: CMakeLists.txt  setup.py
ownage_bot_bak/: README.md
ownage_bot_bak/src/object_tracker/: object_tracker.py
params/: areas.yaml  blocks_world.yaml  paths.yaml  sim_areas.yaml
params/speech/: gen_num_corpus.py  speech.dic  speech.lm  speech.sent  speech.vocab
rulesets/: blocks_1_per_action.yaml  blocks_2_per_action.yaml  blocks_3_per_action.yaml  rules.yaml  script.yaml
scenarios/: blocks_world.yaml
speech/: corpus.txt  gen_corpus.py  pronunciations.yaml  speech.dic  speech.lm  speech.sent  speech.vocab  structured_corpus.yaml
src/: object_tracker.cpp  object_tracker.h
src/action_provider/: action_provider.cpp  aruco_ctrl.cpp  aruco_ctrl.h  baxter_arm_ctrl.cpp  baxter_arm_ctrl.h
src/object_classifier/: object_classifier.py
src/object_collector/: object_collector.py
src/object_picker/: action_provider.cpp  baxter_arm_ctrl.cpp  baxter_arm_ctrl.h  object_picker.cpp  object_picker.h
src/object_tester/: object_test.py  object_tester.py
src/object_tracker/: object_tracker.py
src/ownage_bot/: Actions.py  Objects.py  Predicates.py  Rules.py  __init__.py  actions.py  cmd.py  context.py  objects.py  parse.py  predicates.py  rules.py  tasks.py
src/ownage_bot/parse/: __init__.py  cmd.py  speech.py
srv/: CallAction  CallAction.srv  ClassifyObjects.msg  ListAgents.srv  ListObjects.srv  LocateObject.srv  LookupAgent.srv  LookupObject.srv  LookupPerm  LookupRules.srv  SendAgents.srv  SendObjects.srv
